# metamodule-plugin-sdk

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  a7_symbols.json  api-symbols.txt  debug_raw.h  fonts.hh  libc_stub.c  plugin.cmake  version.cc  version.hh
CoreModules/: CoreProcessor.hh  moduleFactory.hh  module_type_slug.hh
CoreModules/elements/: base_element.hh  element_counter.hh  element_info.hh  element_info_view.hh  element_strings.hh  elements.hh  units.hh
cmake/: arch_mp15xa7.cmake  arm-none-eabi-gcc.cmake  ccache.cmake  plugin.cmake  version.cmake
core-interface/: CMakeLists.txt  README.md
core-interface/CoreModules/: CoreHelper.hh  CoreProcessor.hh  SmartCoreProcessor.hh  SmartCoreProcessorPoly.hh  async_thread.hh  register_module.hh
core-interface/CoreModules/elements/: base_element.hh  element_counter.hh  element_info.hh  element_info_view.hh  element_sort.hh  element_state_conversion.hh  elements.hh  elements_index.hh  units.hh
core-interface/audio/: settings.hh
core-interface/dsp/: block_resampler.hh  resampler.hh  resampler_one.hh  stream_resampler.hh
core-interface/filesystem/: async_filebrowser.hh  dirent.h  fatfs_adaptor.hh  helpers.hh  osdialog_types.h
core-interface/graphics/: pixels.hh  waveform_display.hh
core-interface/gui/: notification.hh
core-interface/midi/: midi_in.hh  midi_message.hh  midi_out.hh
core-interface/patch/: audio.hh  patch.hh  patch_file.hh
core-interface/system/: memory.hh  random.hh  time.hh  usb.hh
core-interface/tests/: CMakeLists.txt  Makefile  resampler_tests.cc  smartcoreprocessor_tests.cc
core-interface/wav/: wav_file_stream.hh
docs/: api.md  async-threads.md  coreprocessor.md  dsp.md  elements.md  file-browser.md  filesystem-syscalls.md  graphic-displays.md  graphics-helpers.md  graphics.md  how-plugins-work.md  licensing_permissions.md  limitations.md  module-registry.md  native-plugin.md  plugin-file-format.md  plugin-mm-json.md  rack-adaptor.md  release.md  system-api.md  text-displays.md  tips.md  wav-file-stream.md
plugin-libc/: CMakeLists.txt  LICENSE  libc.cmake  libm.cmake  libstdcpp.cmake  libsupcpp.cmake
plugin-libc/lib/ct-ng-config/: .config  c-library-build-cmd  c-library-build-cmd2
plugin-libc/libgcc/: libgcc2.c
plugin-libc/libstdc++-v3/libsupc++/: atomicity.cc
plugin-libc/newlib/libc/machine/arm/: aeabi_memcpy-armv7a.S  arm_asm.h  memchr.S  memcpy.S  setjmp.S  strcmp.S  strlen.S
rack-interface/: CMakeLists.txt  LICENSE.md  README.md
rack-interface/dep/include/: FuzzySearchDatabase.hpp  fontstash.h  nanovg.h  nanovg_gl.h  nanovg_gl_utils.h  osdialog.h
rack-interface/dep/include/GLFW/: glfw3native.h
rack-interface/dep/include/openssl/: opensslconf.h
rack-interface/dep/include/rtaudio/: RtAudio.h
rack-interface/include/: arch.hpp  asset.hpp  audio.hpp  common.hpp  helpers.hpp  logger.hpp  math.hpp  midi.hpp  mutex.hpp  patch.hpp  rack.hpp  random.hpp  rtaudio.hpp  settings.hpp  system.hpp
rack-interface/include/app/: ModuleWidget.hpp  MultiLightWidget.hpp  RackWidget.hpp  Scene.hpp  SvgButton.hpp  SvgKnob.hpp  SvgPanel.hpp  SvgPort.hpp  SvgScrew.hpp  SvgSlider.hpp  SvgSwitch.hpp  Switch.hpp  common.hpp
rack-interface/include/dsp/: common.hpp  digital.hpp  minblep.hpp  minblep_16_16.h  minblep_4_32.h  resampler.hpp  vumeter.hpp
rack-interface/include/engine/: Engine.hpp  LightInfo.hpp  Module.hpp  Param.hpp  ParamQuantity.hpp  Port.hpp  PortInfo.hpp
rack-interface/include/metamodule/: VCVTextDisplay.hpp  VCV_module_wrapper.hh  create_model.hh  svg.hh
rack-interface/include/plugin/: Model.hpp  Plugin.hpp  callbacks.hpp
rack-interface/include/simd/: Vector.hpp  functions.hpp
rack-interface/include/ui/: Button.hpp  ChoiceButton.hpp  Label.hpp  List.hpp  Menu.hpp  MenuEntry.hpp  MenuItem.hpp  MenuLabel.hpp  MenuOverlay.hpp  MenuSeparator.hpp  OptionButton.hpp  ProgressBar.hpp  RadioButton.hpp  ScrollWidget.hpp  Scrollbar.hpp  Slider.hpp  TextField.hpp  Tooltip.hpp  TooltipOverlay.hpp
rack-interface/include/widget/: FramebufferWidget.hpp  OpaqueWidget.hpp  SvgWidget.hpp  TransformWidget.hpp  TransparentWidget.hpp  Widget.hpp  event.hpp
rack-interface/include/window/: Svg.hpp  Window.hpp
scripts/: SvgToPng.py  check_syms.py  createinfo.py  dump_syms.py  find_syms.py  helpers.py
scripts/actions/: png.py
scripts/elftools/: README
scripts/helpers/: util.py
